Try to fix table right column's text size weid behavior on mobile

--- a/themes/lost-theme/assets/css/main.css
+++ b/themes/lost-theme/assets/css/main.css
@@ -622,7 +622,7 @@ nav ul li {
 		user-select: none; /* Avoids contents get selected sometimes at unfoldeing */
 		transition: background-color var(--shorter) ease;
 
-		&:hover {
+		&:hover, &:focus-within {
 			background-color: var(--gray-B4);
 		}
 		&::after {
@@ -654,11 +654,6 @@ nav ul li {
 	& details {
 		container-type: inline-size; /* defines the element as a container */
 
-		&[open] > summary::after {
-			color: var(--accent);
-			cursor: default;
-			transform: scaleY(-1); /*transform: rotate(180deg);*/
-		}
 		& p {
 			margin: 2px 6px 6px 6px;
 			text-align: justify;
@@ -669,11 +664,15 @@ nav ul li {
 			font-size: clamp(0.75em, 4.5cqw, 0.85em);
 			line-height: clamp(1.2em, 4.5cqw, 1.3em); /*1.35*/
 		}
-
 		&:focus-within {
 			border-radius: 2px;
 			outline: 2px solid var(--accent);
 			outline-offset: 0;
+		}
+		&[open] > summary::after {
+			color: var(--accent);
+			cursor: default;
+			transform: scaleY(-1); /*transform: rotate(180deg);*/
 		}
 	}
 }
@@ -719,7 +718,7 @@ nav ul li details summary a {
 	&:visited {
 		color: inherit; /*color: color-mix(in srgb, var(--gray-5A) 33%, transparent);*/ /*#ee80ff*/
 	}
-	&:hover {
+	&:hover, &:focus-within {
 		color: var(--gray-0F);
 		font-weight: bold;
 		text-shadow: -1px 1px 2px rgba(0, 0, 0, 0.33);
@@ -1101,6 +1100,7 @@ select {
 }
 
 table {
+	container-type: inline-size;
 	width: 100%;
 	margin-bottom: 8px;
 	/*border-collapse: collapse;*/
@@ -1121,15 +1121,15 @@ table {
 }
 
 th, td {
-	/*line-height: 0;*/ /* Alternative to `display: block` for no bottom padding (hacky) */
+	container-type: inline-size;
 	padding: 0.2em 0.4em;
 	border-right: 1px solid var(--gray-A5);
 	border-bottom: 1px solid var(--gray-A5);
 	font-size: smaller;
 	font-size: clamp(0.5em, 4.5cqw, 1em);
 	line-height: clamp(1.16em, 4.5cqw, 1.33em);
-	container-type: inline-size;
-
+	/*line-height: 0;*/ /* Alternative to `display: block` for no bottom padding (hacky) */
+	
 	& th {
 		vertical-align: center;
 	}
@@ -1925,10 +1925,10 @@ input:not(input:checked) + .label {
 		box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.67) inset;
 		background: rgba(0, 0, 0, 0.25); /*var(--gray-2D);*/
 
-		&:hover {
+		&:hover, &:focus-visible {
 			background-color: var(--gray-A5);
 		}
-		&:active {
+		&:not([type="select"]):active {
 			background-color: color-mix(in srgb, var(--accent) 50%, var(--gray-A5));
 		}
 		& option {
